[gd_scene load_steps=2 format=3 uid="uid://c20kn61e6mfcw"]

[ext_resource type="Script" path="res://addons/anomalyAcesTable/Scene/Table/Table.gd" id="1_6ae6q"]

[node name="Table" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6ae6q")

[node name="HeaderPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HeaderPanel"]
layout_mode = 2

[node name="HeaderCellContainer" type="HBoxContainer" parent="HeaderPanel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="RowPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0

[node name="MarginContainer" type="MarginContainer" parent="RowPanel"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="RowPanel/MarginContainer"]
layout_mode = 2

[node name="RowContainer" type="VBoxContainer" parent="RowPanel/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
